2010-06-10 Magnus Hagdorn
 * PyGC/PyGC/IO/GC_createfile.py: use new wrapper class to access netCDF files
 * PyGC/PyGC/IO/GC_loadfile.py: ditto
 * PyGC/PyGC/IO/GC_file.py: avoid losing useful error message
 * PyGC/PyGC/IO/GC_netcdf.py: wrap NetCDFFile class to enable automatic masking
   and scaling of variables
 * PyGC/PyGC/IO/GC_proj.py: Scientific.IO.NetCDF stores all numeric attributes
   as arrays, netcdf4 does not. Use numpy to reduce dimensionality of attribute
   arrays with a single element.

2010-05-31 Magnus Hagdorn
 * PyGC/PyGC/GC_options.py: tidy up, handle plot size
 * PyGC/progs/plotGCvar: handle plot size

2010-05-31 Magnus Hagdorn
 * PyGC/PyGC/GC_options.py: add option to disable plotting of geographic coord
   system
 * PyGC/progs/plotGCvar: rearrange code, make clipping work (more or less)

2010-05-28 Magnus Hagdorn
 * PyGC/PyGC/GC_options.py: add option to plot vectors
 * PyGC/PyGC/IO/GC_loadfile.py: add functionality to clip variables
 * PyGC/progs/plotGCvar: plot land area and plot vectors

2010-05-28 Magnus Hagdorn
 * PyGC/PyGC/GC_options.py: legend option is now a choice - choose between
   horizontal or vertical legend
 * PyGC/progs/plotGCvar: check if basemap toolkit is available, if not, do not
   plot geographic coord system and coastlines
 * various Makefile.am: make sure libraries are static

2010-05-27 Magnus Hagdorn
 * PyGC/progs/plotGCvar: shade surface
 * PyGC/PyGC/Makefile.am: forgot file

2010-05-27 Magnus Hagdorn
 * Makefile.am: conditionally add new subdirectory
 * configure.in: add option to build and install PyGC
 * PyGC: copying some files from PyCF and porting it to matplotlib

2010-05-12 Magnus Hagdorn
 * doc/ext/erosion/transport.tex: re-enable figure
 * doc/ext/erosion/figs/Makefile.am: generate figure
 * doc/ext/erosion/figs/plot_basal.py: rewrite to use matplotlib instead of
   PyGMT and PyCF

2010-05-12 Magnus Hagdorn
 * extensions/erosion/src/eis_erosion.F90: use new command line handler