@@ -1,0 +1,78 @@
+#Group	Volume	Area	Melt_fraction	Divide_thick	Divide_b_temp
+#Experiment A
+[A]
+Z	2.134	1.031	0.667		3644.		256.43
+Y	2.157	1.031	0.779		3664.71		256.985
+X	2.202	1.011	0.7		3706.2		256.26
+W	2.111	1.031	0.587		3740.74		255.415
+V	2.068	1.031	0.699		3672.4		254.47
+U	2.205	1.016	0.78		3681.108	255.419
+T	2.147	1.031	0.779		3676.37		257.089
+S	2.06	1.031	0.632		3685.91		254.75
+R	2.118	1.097	0.877		3717.53		254.16
+Q	2.08	1.031	0.679		3694.45		255.067
+
+#Experiment B versus A
+[B]
+Z	-2.296	0.	14.543		-4.852		4.52
+Y	-2.55	0.	9.628		-4.78		4.599
+X	-2.679	0.	14.		-5.064		4.47
+W	-3.079	0.	21.976		-5.366		4.604
+V	-2.853	0.	10.73		-5.092		4.65
+U	-2.132	0.	7.564		-4.649		4.657
+T	-2.329	0.	8.087		-4.784		4.988
+S	-3.01	0.	16.297		-5.387		4.61
+R	-2.077	0.	3.307		-4.071		4.585
+Q	-2.885	0.	12.224		-5.222		4.626
+
+#Experiment C versus A
+[C]
+Z	-28.022	-19.884	-32.384		-12.541		3.82
+Y	-28.419	-19.884	-27.728		-12.801		3.532
+X	-28.883	-16.815	-29.		-12.981		3.53
+W	-28.138	-20.369	-39.353		-12.899		3.923	
+V	-28.143	-20.369	-30.329		-12.447		3.75
+U	-28.662	-17.224	-26.026		-12.984		3.875
+T	-28.645	-20.272	-15.789		-13.003		3.478
+S	-28.398	-20.369	-35.443		-12.779		3.77
+R	-29.226	-19.599	-7.982		-13.948		3.389
+Q	-28.51	-20.369	-34.021		-12.902		4.004
+
+#Experiment D versus A
+[D]
+Z	-11.903	-10.184	-2.399		-2.091		-0.2
+Y	-12.054	-10.184	-2.567		-2.117		-0.204
+X	-12.035	-6.924	-0.857		-2.283		-0.18
+W	-11.985	-10.184	-2.044		-2.067		-0.19
+V	-11.654	-10.184	1.001		-1.985		-0.17
+U	-12.2	-7.382	-4.744		-2.334		-0.209
+T	-11.877	-10.184	-0.128		-2.183		-0.149
+S	-12.184	-10.184	0.475		-2.134		-0.19
+R	-12.89	-9.298	-1.482		-2.517		-0.207
+Q	-12.067	-10.184	-3.387		-2.098		-0.185
+
+#Experiment G 
+[G]
+Z	1.53	1.031	0.272		2220.8		248.770
+Y	1.533	1.021	0.316		2223.33		249.054	
+X	1.531	1.016	0.295		2222.2		248.26
+W	1.509	1.031	0.26		2215.719	248.17
+V	1.506	1.031	0.25		2214.8		247.7
+U	2.205	1.016	0.78		3681.431	255.381
+T	1.529	1.021	0.372		2219.27		248.66
+S	1.503	1.031	0.286		2212.55		247.86
+R	1.536	1.087	0.391		2228.28		249.482
+Q	1.505	1.031	0.303		2213.68		248.007
+
+#Experiment H
+[H]
+Z	1.811	1.028	0.516		3433.1		255.85
+Y	1.923	1.022	0.492		3475.05		256.714
+X	2.034	1.02	0.458		3578.4		256.11
+W	1.896	1.033	0.582		3580.90		255.09
+V	1.78	1.031	0.475		3445.5		253.93
+U	2.205	1.016	0.78		3681.089	255.419
+T	1.857	1.024	0.622		3286.71		256.369	
+S	1.744	1.031	0.526		3427.41		254.08
+R	1.818	1.083	0.486		3526.28		253.737
+Q	1.929	1.031	0.351		3645.32		254.951
