@@ -1,4 +1,4 @@
-python_progs = plotGCvar
+python_progs = plotGCvar plotEISMINT2stats
 bin_SCRIPTS = $(python_progs)
 
 EXTRA_DIST = $(python_progs)
