@@ -1,7 +1,7 @@
 %.nc:	%.config
 	$(PYTHON) $(top_srcdir)/scripts/glide_launch.py $(LAUNCH_OPTIONS) -m $(MODEL_BINARY) @SGE_OPTS@ $<
 
-#graphics:	$(graphics)
+graphics:	$(graphics)
 data:		$(data)
 
 .SUFFIXES:	.config
