@@ -1,6 +1,5 @@
-#if BUILD_GRAPHICS
-#  graphics = e2.a.ps e2.b.ps e2.c.ps e2.d.ps e2.f.ps e2.g.ps e2.h.ps e2.i.ps e2.j.ps e2.k.ps e2.l.ps e2.a-comp.ps e2.b-comp.ps e2.c-comp.ps e2.d-comp.ps e2.g-comp.ps e2.h-comp.ps
-#endif
+#graphics = e2.a.eps e2.b.eps e2.c.eps e2.d.eps e2.f.eps e2.g.eps e2.h.eps e2.i.eps e2.j.eps e2.k.eps e2.l.eps e2.a-comp.eps e2.b-comp.eps e2.c-comp.eps e2.d-comp.eps e2.g-comp.eps e2.h-comp.eps
+graphics = e2.a-comp.eps e2.b-comp.eps e2.c-comp.eps e2.d-comp.eps e2.g-comp.eps e2.h-comp.eps
 data = e2.a.nc e2.b.nc e2.c.nc e2.d.nc e2.f.nc e2.g.nc e2.h.nc e2.i.nc e2.j.nc e2.k.nc e2.l.nc
 BUILT_SOURCES = 
 
@@ -17,18 +16,20 @@ e2.d.nc:        e2.a.nc
 e2.j.nc:        e2.i.nc
 e2.l.nc:        e2.k.nc
 
-e2.a-comp.ps:	e2.a.nc
-	@GLIMMER_PREFIX@/bin/plotEISMINT2stats.py -e A $^ $@
-e2.b-comp.ps:	e2.b.nc e2.a.nc
-	@GLIMMER_PREFIX@/bin/plotEISMINT2stats.py -e B $^ $@
-e2.c-comp.ps:	e2.c.nc e2.a.nc
-	@GLIMMER_PREFIX@/bin/plotEISMINT2stats.py -e C $^ $@
-e2.d-comp.ps:	e2.d.nc e2.a.nc
-	@GLIMMER_PREFIX@/bin/plotEISMINT2stats.py -e D $^ $@
-e2.g-comp.ps:	e2.g.nc
-	@GLIMMER_PREFIX@/bin/plotEISMINT2stats.py -e G $^ $@
-e2.h-comp.ps:	e2.h.nc
-	@GLIMMER_PREFIX@/bin/plotEISMINT2stats.py -e H $^ $@
+plotEISMINT2stats = PYTHONPATH=$(top_builddir)/PyGC/src/.libs:$(top_srcdir)/PyGC/:$$PYTHONPATH $(top_srcdir)/PyGC/progs/plotEISMINT2stats -d $(top_srcdir)/PyGC/data/eismint2.data --size=4 3
+
+e2.a-comp.eps:	e2.a.nc
+	$(plotEISMINT2stats) -e A $^ -o $@
+e2.b-comp.eps:	e2.b.nc e2.a.nc
+	$(plotEISMINT2stats) -e B $^ -o $@
+e2.c-comp.eps:	e2.c.nc e2.a.nc
+	$(plotEISMINT2stats) -e C $^ -o $@
+e2.d-comp.eps:	e2.d.nc e2.a.nc
+	$(plotEISMINT2stats) -e D $^ -o $@
+e2.g-comp.eps:	e2.g.nc
+	$(plotEISMINT2stats) -e G $^ -o $@
+e2.h-comp.eps:	e2.h.nc
+	$(plotEISMINT2stats) -e H $^ -o $@
 
 -include $(top_builddir)/make.rules
 
